syntax = "proto3";
package msg;
import "msg.proto";
option go_package = "github.com/ronaksoft/internal/msg";


// TunnelMessage
message TunnelMessage {
  bytes SenderID = 1;
  uint64 SenderReplicaSet = 2;
  repeated rony.KeyValue Store = 3;
  rony.MessageEnvelope Envelope = 4;
}

// EdgeNode
message EdgeNode {
  bytes ServerID = 1;
  uint64 ReplicaSet = 2;
  uint64 Hash = 3;
  repeated string GatewayAddr = 7;
  repeated string TunnelAddr = 8;
}